<resources>
    <string name="app_name">BestClient</string>
    <string name="add_rating">Add Rating</string>
    <string name="arrowback">ArrowBack</string>
    <string name="dialogMessage">Set Rating</string>
    <string name="positiveButton">Conferma</string>
    <string name="negativeButton">Annulla</string>
    <string name="settings">Impostazioni Profilo</string>
    <string name="toastMessage">Toast Message</string>
    <string name="toastMessageValue">toast_message</string>
    <string name="popupValue">popup</string>
    <string name="notification">Notifica</string>
    <string name="impostazioniNotifica">Impostazioni di notifica</string>
    <string name="notificationValue">notification</string>
    <string name="lastcalls">Last Calls</string>
    <string name="piva">Partita IVA</string>
    <string name="comment">Comment</string>
    <string name="settingsChoice">How to get phone number rating</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="font_family_sans_serif">sans-serif</string>

    <!-- Preference Titles -->
    <string name="notifications_header">Notifications</string>
    <string name="lastcalls_header">Last Calls</string>
    <string name="lastcalls_title">Last Calls Time Range</string>

    <!-- Messages Preferences -->
    <string name="NoFilter">noFilter</string>
    <string name="notification_title">Default way of notification</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="icon">icon</string>
    <string name="rating">Rating</string>
    <string name="date">Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="logo">logo</string>
    <string name="dialogMessage2">Rating already inserted</string>
    <string name="modalitaNotifica">Scegli la modalità di notifica</string>
    <string name="delete_the_item_from_the_list">Delete the item from the list?</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Registrati</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Registrati ed entra</string>
    <string name="noAccount">Non hai un account? Clicca qui per registrarti</string>
    <string name="sign_google">Sign in with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="logout">Logout</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="your_profile">Your Profile</string>
    <string name="refresh">Refresh</string>
    <string name="contacts">Contacts</string>
    <string name="name">Name</string>
    <string name="ratingAVG">RatingAVG</string>
    <string name="display_rating">Display Rating</string>
    <string name="number">number</string>
    <string name="display_rating_title">Display Rating As</string>
    <string name="entrata">Chiamate in entrata</string>
    <string name="uscita">Chiamate in uscita</string>
    <string name="Ultime24H">Ultime 24 ore</string>
    <string name="Ultime48H">Ultime 48 ore</string>
    <string name="contatti">I miei contatti</string>
    <string name="voto_medio">Voto medio:</string>
    <string name="commento">commento</string>
    <string name="popup">Pop-Up</string>
    <string name="cerca">Cerca</string>
    <string name="noResults">Nessun Risultato</string>
    <string name="ratingAssegnato">Rating assegnato:</string>
    <string name="ratingMedio">Rating medio:</string>
    <string name="deleteUser">Elimina utente</string>
    <string name="delete_user_confirm">Sei sicuro di voler eliminare l\'account?</string>
    <string name="modifica">modifica</string>
    <string name="pubblica">Rendi pubblico il commento</string>
    <string name="feedback">Feedbacks:</string>
    <string name="noFeedback">Feedbacks non disponibili per il numero selezionato</string>
    <string name="group">👨‍👨‍👧‍👦</string>
    <string name="single">🧑</string>
    <string name="mieiFeedback">Le mie valutazioni</string>
    <string name="Nvalutazioni">(0)</string>
</resources>