<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notifications_header"
        app:icon="@drawable/ic_baseline_notifications_active_24">

        <ListPreference
            app:defaultValue="@string/toastMessageValue"
            app:entries="@array/notifications_entries"
            app:entryValues="@array/notifications_values"
            app:key="@string/notification"
            app:title="@string/notification_title"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/group_header"
        app:icon="@drawable/ic_baseline_group_24">

        <EditTextPreference
            app:key="@string/group"
            app:title="@string/group_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <!--<PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>-->

</PreferenceScreen>