<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/contacts"
        android:icon="@drawable/ic_baseline_contact_phone_24"
        android:title="@string/contacts"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"
        android:visible="false" />

</menu>