<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtonGroup"
        tools:ignore="UselessParent">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notification"
            android:text="@string/notification"
            android:paddingLeft="5sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toast"
            android:text="@string/toastMessage"
            android:paddingLeft="5sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/popup"
            android:text="@string/popup"
            android:paddingLeft="5sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
    </RadioGroup>

</LinearLayout>